# discord-notifier

./: Cargo.toml  README.md
.github/workflows/: rust-build-release.yml  rust-build.yml  rust-release.yml  rust.yml
src/: main.rs
