[package]
name = "discord-notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
serde_json = "1.0.94"
structopt = "0.3.26"
atty = "0.2.14"
confy = "0.5.1"
syn = "2.0.8"
chrono = "0.4.24"
# security update
time = "0.3.20"

[dependencies.serde]
version = "1.0.158"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.14"
features = ["blocking", "json"]
